# Fillit

./: .gitignore  19_variants  19_variants.txt  1_figure  26  2_figures  5_squares  CMakeLists.txt  Makefile  backtrack.c  calculation.c  coordinates.txt  extern_file.txt  fillit  fillit.c  fillit.h  h_line_3_squares  info.md  input.c  links  main.c  main.c.backup  mashley_fillit.code-workspace  pseudocode  read_and_validation.c  sample.fillit  test_merge1  tetriminos
Fillit/: ft_tetadd.c  ft_tetnew.c  libft.h  safe.c  validation.c
aelphias/: aelphias.h  ideals.c
fillit/: .main.c.swp  10_sq  19_variants  2_squares  2_sticks  2_tet4swap  3_different  4_h_sticks  L  Makefile  backtrack.c  calculation.c  calculation_beta.c  check_sign.c  check_tetr.c  compilations  coordinates.c  dicycle.c  eight_to_six.c  fillit.c  fillit.h  first.c  ft_realloc.c  ft_tetadd.c  ft_tetnew.c  g_tetriminos_coord  gen_map.c  generator.c  get_coord.c  lst_add.c  lst_create.c  main.c  matrix_add_down.c  matrix_print.c  min_map.c  plan.md  pseudocode  safe.c  t_figure.c  think_about.c  (+1 more)
includes/: fillit.h
libft/: Makefile  ft_dannew.c  ft_lstdelone.c  ft_memset.c  ft_putstr_fd.c  ft_realloc.c  ft_strcount.c  ft_tetadd.c  ft_tetnew.c  libft.h  libft_mashley.h  safe.c  validation.c
mashley/: CMakeLists.txt  Check.c  Makefile  check_neig.c  ft_abs.c  ft_intlen.c  ft_shrinking_gap.c  ft_strchri.c  ft_strcount.c  ft_strjoinfree.c  ft_strplen.c  ft_tetadd.c  ft_tetnew.c  hard_validation.c  mashley.h  read.c  simple_validation.c  valid_delusion.c  validation.c
src/: .backtrack.c.swp  backtrack.c  (+14 more)
(+168 files in other folders)
